--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
 <script type="text/javascript">
   fetch('data.json')
-  .then(r => r.json()))
+  .then(r => r.json())
   .then(r => {
     console.log(r);
   })
