--- a/index.html
+++ b/index.html
@@ -20,18 +20,30 @@
     <div id="app"></div>
 <script type="text/javascript">
   let data;
-  document.addEventListener('scroll', (e) => {console.log(window.innerHeight, window.scrollY)})
+  document.addEventListener('scroll', (e) => {
+    let windowHeight = document.getElementById('app').getBoundingClientRect().height;
+    let scrollHeight = window.scrollY;
+    if (windowHeight - scrollHeight < 500) {
+      let dataToDraw = data.slice(0,40);
+      data = data.slice(40)
+      drawImage(dataToDraw);  
+    }
+  })
   fetch('data.json')
   .then(r => r.json())
   .then(r => {
     data = r.slice(40);
-    for(let i=0; i<40; i++) {
+    drawImage(r.slice(0,40));
+  })
+  const drawImage = (imageArray) => {
+    imageArray.map(image => {
       let image = document.createElement('img');
       image.src = r[i].artist_image;
       image.classList.add("artist-image");
       document.getElementById('app').appendChild(image);
-    }
-  })
+    }):
+  }
+
 </script>
   </body>
 </html>
