--- a/index.html
+++ b/index.html
@@ -8,6 +8,22 @@
         max-width:1500px;
         margin:0 auto;
       }
+      .artist-container {
+        display: inline-block;
+        width: 300px;
+        height: 300px;
+        vertical-align: top;
+      }
+      .artist-title {
+        font-family: 'Krub', sans-serif;
+        position: relative;
+        bottom: 30px;
+        color: white;
+        width: 100%;
+        left: 20px;
+        font-size: 1.5em;
+        text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+      }
       .artist-image {
         display:inline-block;
         width:300px;
@@ -15,6 +31,7 @@
         vertical-align: top;
       }
     </style>
+    <link href="https://fonts.googleapis.com/css?family=Krub" rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>
