--- a/index.html
+++ b/index.html
@@ -9,26 +9,29 @@
         margin:0 auto;
       }
       .artist-container {
-        display: inline-block;
+        display: inline-table;
         width: 300px;
         height: 300px;
         vertical-align: top;
       }
       .artist-title {
         font-family: 'Krub', sans-serif;
-        position: relative;
-        bottom: 30px;
+        vertical-align: bottom;
         color: white;
-        width: 100%;
-        left: 20px;
+        width: 300px;
+        position: relative;
+        display: table-cell;
+        height: 100%;
+        padding: 16px;
         font-size: 1.5em;
         text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
       }
       .artist-image {
-        display:inline-block;
-        width:300px;
-        height:300px;
+        display: inline-block;
+        width: 300px;
+        height: 300px;
         vertical-align: top;
+        position: absolute;
       }
     </style>
     <link href="https://fonts.googleapis.com/css?family=Krub" rel="stylesheet">
