--- a/index.html
+++ b/index.html
@@ -5,33 +5,38 @@
     <title>1000 albums challange</title>
     <style media="screen">
       #app {
-        max-width:1500px;
-        margin:0 auto;
+        max-width: 80vw;
+        margin: 0 auto;
+        min-width: 600px;
       }
       .artist-container {
         display: inline-table;
-        width: 300px;
-        height: 300px;
+        width: 16vw;
+        height: 16vw;
+        min-width: 150px;
+        min-height: 150px;
         vertical-align: top;
       }
       .artist-title {
         font-family: 'Krub', sans-serif;
         vertical-align: bottom;
         color: white;
-        width: 300px;
+        width: 15vw;
+        min-width: 150px;
         position: relative;
         display: table-cell;
         height: 100%;
-        padding: 16px;
-        font-size: 1.5em;
+        padding: 1vw;
+        font-size: 100%;
         text-shadow:0px 1px 0 rgb(0,0,0),0px -1px 0 rgb(0,0,0),1px 0px 0 rgb(0,0,0),-1px 0px 0 rgb(0,0,0),1px 1px 0 rgb(0,0,0),1px -1px 0 rgb(0,0,0),-1px 1px 0 rgb(0,0,0),-1px -1px 0 rgb(0,0,0),0px 2px 0 rgb(0,0,0),0px -2px 0 rgb(0,0,0),2px 0px 0 rgb(0,0,0),-2px 0px 0 rgb(0,0,0),2px 2px 0 rgb(0,0,0),2px -2px 0 rgb(0,0,0),-2px 2px 0 rgb(0,0,0),-2px -2px 0 rgb(0,0,0);
       }
       .artist-image {
-        display: inline-block;
-        width: 300px;
-        height: 300px;
-        vertical-align: top;
+        display: block;
+        width: 16vw;
+        height: auto;
         position: absolute;
+        min-width: 150px;
+        min-height: 150px;
       }
     </style>
     <link href="https://fonts.googleapis.com/css?family=Krub" rel="stylesheet">
