--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
         min-width: 600px;
       }
       .artist-container {
-        display: inline-table;
+        display: inline-block;
+        position: relative;
         width: 16vw;
         height: 16vw;
         min-width: 150px;
@@ -19,30 +20,40 @@
       }
       .artist-title {
         font-family: 'Krub', sans-serif;
+        cursor:pointer;
+        user-select: none;
         text-align: center;
-        vertical-align: bottom;
+        vertical-align: text-bottom;
         color: white;
-        width: 15vw;
+        width: 100%;
+        height: auto;
         min-width: 150px;
-        position: relative;
-        display: table-cell;
-        height: 100%;
+        padding-top: 10px;
+        position: absolute;
         word-break: break-word;
-        padding: 1vw 0px;
         font-size: 100%;
-        transition: transform 1s ease-in-out;
+        transition: transform 0.6s ease-in-out;
         backface-visibility: hidden;
-        text-shadow:0px 1px 0 rgb(0,0,0),0px -1px 0 rgb(0,0,0),1px 0px 0 rgb(0,0,0),-1px 0px 0 rgb(0,0,0),1px 1px 0 rgb(0,0,0),1px -1px 0 rgb(0,0,0),-1px 1px 0 rgb(0,0,0),-1px -1px 0 rgb(0,0,0),0px 2px 0 rgb(0,0,0),0px -2px 0 rgb(0,0,0),2px 0px 0 rgb(0,0,0),-2px 0px 0 rgb(0,0,0),2px 2px 0 rgb(0,0,0),2px -2px 0 rgb(0,0,0),-2px 2px 0 rgb(0,0,0),-2px -2px 0 rgb(0,0,0);
+        z-index: 2;
+        text-shadow: rgb(79, 79, 79) 2px 0px 0px, rgb(79, 79, 79) 1.75517px 0.958851px 0px, rgb(79, 79, 79) 1.0806px 1.68294px 0px, rgb(79, 79, 79) 0.141474px 1.99499px 0px, rgb(79, 79, 79) -0.832294px 1.81859px 0px, rgb(79, 79, 79) -1.60229px 1.19694px 0px, rgb(79, 79, 79) -1.97998px 0.28224px 0px, rgb(79, 79, 79) -1.87291px -0.701566px 0px, rgb(79, 79, 79) -1.30729px -1.5136px 0px, rgb(79, 79, 79) -0.421592px -1.95506px 0px, rgb(79, 79, 79) 0.567324px -1.91785px 0px, rgb(79, 79, 79) 1.41734px -1.41108px 0px, rgb(79, 79, 79) 1.92034px -0.558831px 0px;
       }
-      .artist-image {
-        display: block;
+      .image {
+        position: absolute;
         width: 16vw;
         height: auto;
-        position: absolute;
+        display: block;
+
         min-width: 150px;
         min-height: 150px;
-        transition: transform 1s ease-in-out;
+        transition: transform 0.6s ease-in-out;
         backface-visibility: hidden;
+      }
+      .artist-image {
+        z-index: 2;
+        transform: rotateY(0deg);
+      }
+      .album-image {
+        transform: rotateY(180deg);
       }
     </style>
     <link href="https://fonts.googleapis.com/css?family=Krub" rel="stylesheet">
@@ -60,7 +71,7 @@
       drawImage(dataToDraw);
     }
   })
-  fetch('data.json')
+  fetch('https://raw.githubusercontent.com/DomasB/1000albums/master/data.json')
   .then(r => r.json())
   .then(r => {
     data = r.slice(40);
@@ -83,12 +94,32 @@
 
           let image = document.createElement('img');
           image.src = r.ok ? artist.artist_image : 'empty.png';
-          image.classList.add("artist-image");
+          image.classList.add('artist-image');
+          image.classList.add('image');
+
+          let albumImage = document.createElement('img');
+          albumImage.src = r.ok ? artist.album.album_image : 'empty.png'
+          albumImage.classList.add('image')
+          albumImage.classList.add('album-image')
+
           containerDiv.appendChild(image);
+          containerDiv.appendChild(albumImage);
           containerDiv.appendChild(titleDiv);
           containerDiv.appendChild(albumTitleDiv);
+
+          titleDiv.addEventListener('click', (e) => {
+            e.stopPropagation();
+            window.open(artist.artist_url, 'blank_')
+          });
+
+          albumTitleDiv.addEventListener('click', (e) => {
+            e.stopPropagation();
+            window.open(artist.album.album_url, 'blank_')
+          });
+
           containerDiv.addEventListener('click', () => {
             image.style.transform = image.style.transform == 'rotateY(180deg)' ?  'rotateY(0deg)' :  'rotateY(180deg)';
+            albumImage.style.transform = image.style.transform == 'rotateY(180deg)' ?  'rotateY(0deg)' :  'rotateY(180deg)';
             titleDiv.style.transform = titleDiv.style.transform == 'rotateY(180deg)' ?  'rotateY(0deg)' :  'rotateY(180deg)';
             albumTitleDiv.style.transform =  albumTitleDiv.style.transform == 'rotateY(180deg)' ?  'rotateY(0deg)' :  'rotateY(180deg)';
           })
