--- a/index.html
+++ b/index.html
@@ -27,12 +27,11 @@
         user-select: none;
         text-align: center;
         vertical-align: text-bottom;
-        padding: 0px 5px;
+        padding: 10px 2% 0px 2%;
         color: white;
-        width: 100%;
+        width: 96%;
         height: auto;
         min-width: 150px;
-        padding-top: 10px;
         position: absolute;
         word-break: break-word;
         font-size: 100%;
