--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
       html {
         scroll-behavior: smooth;
       }
+      body {
+       background-color: #272727;
+      }
       #app {
         max-width: 80vw;
         margin: 0 auto;
